# reverbnetwork

./: CMakeLists.txt  README.md  README.txt  ReverbNetwork.aps  ReverbNetwork.def  ReverbNetwork.rc  ReverbNetwork.sln  ReverbNetwork.vcxproj  ReverbNetwork.vcxproj.filters
ReverbNetworkPresets/: CustomHallAN-Equalized.xml  CustomHallANDirectWetDry100.xml  CustomHallANDirectWetDry25.xml  CustomHallANDirectWetDry40.xml  CustomHallANMixWetDry100.xml  CustomHallANMixWetDry25.xml  CustomHallANMixWetDry40.xml  CustomHallANSurround.xml  Dattorro1997-Equalized.xml  Dattorro1997-EqualizedWetDry100.xml  Dattorro1997-Original.xml  Dattorro1997-StrongerLowPass.xml  Dattorro1997-SurroundER+Nodes.xml  Dattorro1997-SurroundOnlyER.xml  Dattorro1997-SurroundOnlyNodes.xml  Dattorro1997-SurroundSpread.xml  Dattorro1997-SurroundSpreadV2.xml  Dattorro1997-SurroundSpreadV3.xml  Dattorro1997-WetDry100.xml  Dattorro1997-WetDry25.xml  Dattorro1997-WetDry40.xml  LongFlutterEcho(Schroeder).xml  RoomAN.xml  Schroeder1961.xml  ShortFlutterEcho(Schroeder).xml  SingleAllpassfilter.xml
include/: BaseAPModule.h  ConnectionMatrix.h  EqualizerModule.h  GainModule.h  GuiBaseAPModule.h  GuiCustomRowColumnView.h  GuiCustomSplashScreen.h  GuiCustomTextEdit.h  GuiCustomTextLabel.h  GuiCustomValueEdit.h  GuiGraphicsConnections.h  GuiGraphicsModule.h  GuiGraphicsView.h  GuiHandleView.h  GuiOpenGLGraphicsView.h  GuiOptionMenuInputSelector.h  GuiScrollViewAutoSizeable.h  GuiSignalGenerator.h  GuiWorkspaceView.h  Logging.h  MixerModule.h  PresetReadWrite.h  QuantizerModule.h  ReverbNetworkController.h  ReverbNetworkDefines.h  ReverbNetworkEditor.h  ReverbNetworkEnums.h  ReverbNetworkProcessor.h  SchroederAllpass.h  SignalGenerator.h  TimerThread.h  ValueConversion.h  XmlPresetReadWrite.h  reverbnetworkids.h  version.h
resources/: Thumbs.db  vstgui.aps  vstgui.rc
source/: BaseAPModule.cpp  BaseAPModule.h  ComponentMessage.cpp  ComponentMessage.h  ConnectionMatrix.cpp  ConnectionMatrix.h  EqualizerModule.cpp  EqualizerModule.h  GainModule.cpp  GainModule.h  GuiBaseAPModule.cpp  GuiBaseAPModule.h  GuiBaseModuleFrame.cpp  GuiBaseModuleFrame.h  GuiCustomRowColumnView.cpp  GuiCustomRowColumnView.h  GuiCustomSplashScreen.cpp  GuiCustomSplashScreen.h  GuiCustomTextEdit.cpp  GuiCustomTextEdit.h  GuiCustomTextLabel.cpp  GuiCustomTextLabel.h  GuiCustomValueEdit.cpp  GuiCustomValueEdit.h  GuiGraphicsConnections.cpp  GuiGraphicsConnections.h  GuiGraphicsModule.cpp  GuiGraphicsModule.h  GuiGraphicsView.cpp  GuiGraphicsView.h  GuiHandleView.cpp  GuiHandleView.h  GuiKnobGroup.cpp  GuiKnobGroup.h  GuiModuleHandle.cpp  GuiModuleHandle.h  GuiOnOffTextButton.cpp  GuiOnOffTextButton.h  GuiOpenGLGraphicsView.cpp  GuiOpenGLGraphicsView.h  (+38 more)
src/: BaseAPModule.cpp  ConnectionMatrix.cpp  EqualizerModule.cpp  GainModule.cpp  GuiBaseAPModule.cpp  GuiCustomRowColumnView.cpp  GuiCustomSplashScreen.cpp  GuiCustomTextEdit.cpp  GuiCustomTextLabel.cpp  GuiCustomValueEdit.cpp  GuiGraphicsConnections.cpp  GuiGraphicsModule.cpp  GuiGraphicsView.cpp  GuiHandleView.cpp  GuiOpenGLGraphicsView.cpp  GuiOptionMenuInputSelector.cpp  GuiScrollViewAutoSizeable.cpp  (+16 more)
